// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change Mining Fees should render with custom props 1`] = `
<SafeAreaViewComponent>
  <View>
    <Gradient
      style={
        Object {
          "height": 44,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 20,
          "position": "relative",
          "top": 66,
        }
      }
    >
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="High"
          onPress={[Function]}
          value="high"
        />
      </View>
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Standard"
          onPress={[Function]}
          value="standard"
        />
      </View>
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Low"
          onPress={[Function]}
          value="low"
        />
      </View>
      <Connect(CustomFees)
        handlePress={[Function]}
        sourceWallet={Object {}}
      />
    </View>
  </View>
</SafeAreaViewComponent>
`;

exports[`Change Mining Fees should render with high props 1`] = `
<SafeAreaViewComponent>
  <View>
    <Gradient
      style={
        Object {
          "height": 44,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 20,
          "position": "relative",
          "top": 66,
        }
      }
    >
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={true}
          label="High"
          onPress={[Function]}
          value="high"
        />
      </View>
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Standard"
          onPress={[Function]}
          value="standard"
        />
      </View>
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Low"
          onPress={[Function]}
          value="low"
        />
      </View>
      <Connect(CustomFees)
        handlePress={[Function]}
        sourceWallet={Object {}}
      />
    </View>
  </View>
</SafeAreaViewComponent>
`;

exports[`Change Mining Fees should render with low props 1`] = `
<SafeAreaViewComponent>
  <View>
    <Gradient
      style={
        Object {
          "height": 44,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 20,
          "position": "relative",
          "top": 66,
        }
      }
    >
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="High"
          onPress={[Function]}
          value="high"
        />
      </View>
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Standard"
          onPress={[Function]}
          value="standard"
        />
      </View>
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={true}
          label="Low"
          onPress={[Function]}
          value="low"
        />
      </View>
      <Connect(CustomFees)
        handlePress={[Function]}
        sourceWallet={Object {}}
      />
    </View>
  </View>
</SafeAreaViewComponent>
`;

exports[`Change Mining Fees should render with standard props 1`] = `
<SafeAreaViewComponent>
  <View>
    <Gradient
      style={
        Object {
          "height": 44,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 20,
          "position": "relative",
          "top": 66,
        }
      }
    >
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="High"
          onPress={[Function]}
          value="high"
        />
      </View>
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={true}
          label="Standard"
          onPress={[Function]}
          value="standard"
        />
      </View>
      <View
        style={
          Object {
            "height": 44,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Low"
          onPress={[Function]}
          value="low"
        />
      </View>
      <Connect(CustomFees)
        handlePress={[Function]}
        sourceWallet={Object {}}
      />
    </View>
  </View>
</SafeAreaViewComponent>
`;
